[package]
name = "yarws"
description = "Yet Another Rust WebSocket library"
version = "0.1.0"
authors = ["Igor Anic <igor.anic@gmail.com>"]
repository = "https://github.com/ianic/yarws"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.8.2"
hex-literal = "0.2.1"
base64 = "0.12.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
inflate = "0.4.5"
miniz_oxide = "0.3.6"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.5.0"
slog-async = "2.5.0"
slog-stdlog = "4.0.0"
failure = "0.1.7"
structopt = "0.3.13"
rand = "0.7.3"
url = "2.1.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
colored = "1.9"